--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "npm": ">= 5.3.x"
   },
   "scripts": {
-    "test": "mocha test"
+    "test": "mocha test --timeout 5000 --exit"
   },
   "main": "./index.js",
   "version": "0.0.3",
