--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "email": "shmoop207@gmail.com"
   },
   "engines": {
-    "node": ">= 8.4.x",
-    "npm": ">= 5.3.x"
+    "node": ">= 10.x.x",
+    "npm": ">= 6.x.x"
   },
   "scripts": {
     "test": "mocha test --timeout 5000 --exit"
