--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "readme": "",
   "readmeFilename": "README.md",
   "dependencies": {
+    "appolo-cache": "^6.0.6",
     "appolo-event-dispatcher": "^6.0.7",
     "ioredis": "^4.3.0",
     "lodash": "^4.17.11",
