--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "appolo-state-incr",
-  "description": "simple state managemnt for nodejs",
+  "description": "simple state increment managemnt",
   "keywords": [
-    "cache",
-    "lru",
-    "memory"
+    "state",
+    "incr",
+    "increment"
   ],
   "author": {
     "name": "Roman Svichar",
@@ -22,7 +22,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/shmoop207/appolo-state.git"
+    "url": "https://github.com/shmoop207/appolo-state-incr.git"
   },
   "readme": "",
   "readmeFilename": "README.md",
